Add top five schools

--- a/CitySchools.ipynb
+++ b/CitySchools.ipynb
@@ -1233,12 +1233,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wright High School</td>\n",
+       "      <td>51.56%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>51.19%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cabrera High School</td>\n",
+       "      <td>50.86%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Griffin High School</td>\n",
+       "      <td>50.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pena High School</td>\n",
+       "      <td>49.90%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           school_name % Overall Passing\n",
+       "0   Wright High School            51.56%\n",
+       "1   Thomas High School            51.19%\n",
+       "2  Cabrera High School            50.86%\n",
+       "3  Griffin High School            50.14%\n",
+       "4     Pena High School            49.90%"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_performing_schools = summary_schools.groupby([\"% Overall Passing\", \"school_name\"]).size().sort_values(ascending=False)\n",
+    "top_performing_schools.to_frame()\n",
+    "top_five_schools = top_performing_schools.reset_index()\n",
+    "column_names = [\"school_name\", \"% Overall Passing\"]\n",
+    "\n",
+    "top_five_schools = top_five_schools.reindex(columns=column_names)\n",
+    "top_five_schools.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1256,10 +1333,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Bailey High School</td>\n",
+       "      <td>30.35%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Johnson High School</td>\n",
+       "      <td>30.18%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Figueroa High School</td>\n",
+       "      <td>30.11%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Rodriguez High School</td>\n",
+       "      <td>29.61%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>29.52%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              school_name % Overall Passing\n",
+       "10     Bailey High School            30.35%\n",
+       "11    Johnson High School            30.18%\n",
+       "12   Figueroa High School            30.11%\n",
+       "13  Rodriguez High School            29.61%\n",
+       "14      Huang High School            29.52%"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_five_schools.tail()"
+   ]
   },
   {
    "cell_type": "markdown",
